tdf#111305: Fix group name refresh in pivot table

Change-Id: Ibc22bfba5765aba3014651df50afb23b893d2b5a